Spring Boot 4 Migration
pom.xml
- migrate Spring Boot dependencies
- patch security vulnerabilities
- remove unnecessary mockito-inline

application.properties
- migrate spring properties
- add opentelemetry properties

- remove unnecessary @Autowired
- add @NonNull to interceptor method parameters
- replace deprecated Jackson classes
- retain JSON property order (no alpha sorting)
- fix minor issues discovered by code analysis
- upgrade database integration tests mongodb 5 -> 7

Code Cleanup
- add test coverage for PaymentFeatureTestingFees
- remove unnecessary mockito inline config file
- remove unnecessary controller method params
- remove unnecessary @PathVariable names
- replace long string constants with text blocks
- String.format -> String.formatted
- optimise imports