@@ -8,9 +8,9 @@ public class PresenterValidator extends ValidatorImpl<Submission> implements Val
     @Override
     public void validate(final Submission input) throws SubmissionValidationException {
         if (input.getPresenter() == null) {
-            throw new SubmissionValidationException(String.format("Presenter details are absent in submission [%s]", input.getId()));
+            throw new SubmissionValidationException("Presenter details are absent in submission [%s]".formatted(input.getId()));
         } else if (StringUtils.isBlank(input.getPresenter().getEmail())) {
-            throw new SubmissionValidationException(String.format("Presenter email is absent in submission [%s]", input.getId()));
+            throw new SubmissionValidationException("Presenter email is absent in submission [%s]".formatted(input.getId()));
         }
         super.validate(input);
 
